--- a/ception/articles/static/css/articles.css
+++ b/ception/articles/static/css/articles.css
@@ -108,6 +108,8 @@ article .tags {
 }
 
 .selected-div {
+  display: inline-block;
+  width: calc(100% - 50px);
   font-family: "Georgia", Times, serif;
   font-size: 20px;
   vertical-align: middle;
@@ -117,9 +119,12 @@ article .tags {
 }
 
 .compare-div {
+  display: inline-block;
+  width: calc(100% - 50px);
   font-family: "Georgia", Times, serif;
   font-size: 20px;
   vertical-align: middle;
   line-height: 34px;
   border: 3px solid #e3c300;
 }
+
