--- a/ception/articles/static/css/articles.css
+++ b/ception/articles/static/css/articles.css
@@ -107,25 +107,41 @@ article .tags {
   border-top: 55px solid transparent;
 }
 
+#sentence-list {
+  border: 2px solid #e3e3e3;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+#sentence-list-head {
+  font-family: "Arial", arial;
+  font-size: 30px;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #e3e3e3;
+  padding-left: 10px;
+}
+
+
+
 .selected-div {
   display: inline-block;
-  width: calc(100% - 50px);
+  width: calc(100%);
   font-family: "Georgia", Times, serif;
   font-size: 20px;
   vertical-align: middle;
-  line-height: 34px;
-  border: 3px solid #93c6ef;
+  line-height: 30px;
   word-wrap: break-word;
+  border-bottom: 1px solid #e3e3e3;
 }
 
 .compare-div {
-  display: inline-block;
-  width: calc(100% - 50px);
+  width: calc(100%);
+  /*display: inline-block;*/
   font-family: "Georgia", Times, serif;
-  font-size: 20px;
+  /*font-size: 20px;*/
   vertical-align: middle;
-  line-height: 34px;
-  border: 3px solid #e3c300;
+  /*line-height: 30px;*/
+  border-bottom: 1px solid #e3e3e3;
 }
 
 .compare-div del {
@@ -136,4 +152,12 @@ article .tags {
 .compare-div ins {
   color: #ff3366;
   text-decoration: none;
+}
+
+.sentence-portrait {
+  width: 40px;
+  border-radius: 5px;
+  float: left;
+  vertical-align: middle;
+  border-left: 5px solid transparent;
 }
