--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -1,32 +1,38 @@
 <div id="block-{{ author }}" class="sentence-block">
-  <div class="compare-div" onclick="show_comment('{{ author }}')">
-    <a href="{% url 'profile' author.username %}"><img src="{{ author.profile.get_picture }}" class="sentence-portrait"></a>
-    <div class="comment-text">
-      <h5>
-        <a href="{% url 'profile' author.username %}">{{ author.profile.get_screen_name }}</a>
-        <small>here should be the time</small>
-      </h5>
-      <div id="c-{{ author }}" style="display: inline"></div>
-      {#      <button type="button" class="btn btn-default" style="float: right" onclick="show_comment('{{ author }}')">#}
-      {#        <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>#}
-      {#      </button>#}
-    </div>
-
-    <div class="s-comment-block" id="s-comment-block-{{ author }}" style="display: none">
-      <div class="post-comment clearfix">
-        <form role="form" id="comment-form-{{ author }}">
-          {% csrf_token %}
-          <input type="hidden" name="version_id" id="version_id-{{ author }}" value="{{ form.instance.pk }}">
-          <input type="hidden" name="sentence_id" id="sentence_id-{{ author }}" value="0">
-          <div class="comment-input clearfix">
-            <textarea class="form-control sentence-comment" rows="1"
-                      placeholder="Write a comment..."
-                      name="sentence-comment" id="sentence-comment" data-author="{{ author }}"></textarea>
-          </div>
-        </form>
+  <div class="row">
+    <div class="col-md-10">
+      <a href="{% url 'profile' author.username %}"><img src="{{ author.profile.get_picture }}"
+                                                         class="sentence-portrait"></a>
+      <div class="comment-text">
+        <h5>
+          <a href="{% url 'profile' author.username %}">{{ author.profile.get_screen_name }}</a>
+          <small id="time-{{ author }}">here should be the time</small>
+        </h5>
+        <div id="c-{{ author }}" style="display: inline"></div>
       </div>
-      <div class="well well-sm" id="t-{{ author }}"></div>
+    </div>
+    <div class="col-md-2">
+      <button class="btn btn-default" onclick="show_comment('{{ author }}')"
+              style="display: inline; padding: 6px 10px;">
+        <span class="glyphicon glyphicon-comment"></span>
+      </button>
+      <button class="btn btn-default" onclick="show_comment('{{ author }}')"
+              style="display: inline; padding: 6px 10px;">
+        <span class="glyphicon glyphicon-thumbs-up"></span>
+      </button>
     </div>
   </div>
+  <div class="s-comment-block" id="s-comment-block-{{ author }}" style="display: none">
+    <form role="form" id="comment-form-{{ author }}">
+      {% csrf_token %}
+      <input type="hidden" name="version_id" id="version_id-{{ author }}" value="{{ form.instance.pk }}">
+      <input type="hidden" name="sentence_id" id="sentence_id-{{ author }}" value="0">
+      <textarea class="form-control sentence-comment-form" rows="1"
+                placeholder="Write a comment..."
+                name="sentence-comment" data-author="{{ author }}"></textarea>
+    </form>
+    <div class="sentence-comment-list" id="t-{{ author }}"></div>
+  </div>
+
 
 </div>
