--- a/staticfiles/css/articles.css
+++ b/staticfiles/css/articles.css
@@ -121,20 +121,7 @@ article .tags {
   padding-left: 10px;
 }
 
-
-
-.selected-div {
-  display: inline-block;
-  width: calc(100%);
-  font-family: "Georgia", Times, serif;
-  font-size: 20px;
-  vertical-align: middle;
-  line-height: 30px;
-  word-wrap: break-word;
-  border-bottom: 1px solid #e3e3e3;
-}
-
-.compare-div {
+.sentence-block {
   width: calc(100%);
   /*display: inline-block;*/
   font-family: "Georgia", Times, serif;
@@ -144,20 +131,67 @@ article .tags {
   border-bottom: 1px solid #e3e3e3;
 }
 
-.compare-div del {
+.sentence-block del {
   color: #3399ff;
   text-line-through-color: #6699ff;
 }
 
-.compare-div ins {
+.sentence-block ins {
   color: #ff3366;
   text-decoration: none;
 }
 
 .sentence-portrait {
+  margin-top: 4px;
   width: 40px;
   border-radius: 5px;
   float: left;
   vertical-align: middle;
   border-left: 5px solid transparent;
+}
+
+.selected-block {
+  /*display: inline-block;*/
+  margin-top: -3px;
+  background-color: #e7f7f7;
+}
+
+.sentence-block button {
+  display: inline;
+  padding: 6px 10px;
+  margin-top: 5px;
+}
+
+.sentence-comment-form {
+  margin-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: -moz-calc(100% - 20px);
+  width: -webkit-calc(100% - 20px);
+  width: calc(100% - 20px);
+}
+
+.sentence-comment {
+  border-bottom: 1px solid #e3e3e3;
+  margin-left: 10px;
+  width: -moz-calc(100% - 20px);
+  width: -webkit-calc(100% - 20px);
+  width: calc(100% - 20px);
+}
+
+.sentence-comment-list {
+  margin-left: 15px;
+  width: -moz-calc(100% - 20px);
+  width: -webkit-calc(100% - 20px);
+  width: calc(100% - 20px);
+  margin-bottom: 5px;
+  background-color: #fafafa;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+.sentence-comment-list .sentence-comment:last-child {
+  border-bottom: none;
 }
