--- a/ception/articles/static/css/articles.css
+++ b/ception/articles/static/css/articles.css
@@ -113,13 +113,13 @@ article .tags {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
-#sentence-list-head {
-  font-family: "Arial", arial;
-  font-size: 30px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #e3e3e3;
-  padding-left: 10px;
-}
+/*#sentence-list-head {*/
+/*font-family: "Arial", arial;*/
+/*font-size: 30px;*/
+/*background-color: #f5f5f5;*/
+/*border-bottom: 1px solid #e3e3e3;*/
+/*padding-left: 10px;*/
+/*}*/
 
 .sentence-block {
   width: calc(100%);
@@ -129,6 +129,10 @@ article .tags {
   vertical-align: middle;
   /*line-height: 30px;*/
   border-bottom: 1px solid #e3e3e3;
+}
+
+#sentence-list .sentence-block:last-child {
+  border-bottom: none;
 }
 
 .sentence-block del {
@@ -151,8 +155,6 @@ article .tags {
 }
 
 .selected-block {
-  /*display: inline-block;*/
-  margin-top: -3px;
   background-color: #e7f7f7;
 }
 
@@ -194,4 +196,12 @@ article .tags {
 
 .sentence-comment-list .sentence-comment:last-child {
   border-bottom: none;
+}
+
+.sentence-block-left {
+  width: 80%;
+}
+
+.sentence-block-right {
+  width: 20%;
 }
