Comment Count Function Added

--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -15,7 +15,7 @@
       <button class="btn btn-default" onclick="show_comment('{{ author }}')"
               style="display: inline; padding: 6px 10px;">
         <span class="glyphicon glyphicon-comment" style="display: inline;"></span>
-        <div id="comment-count" style="display: inline;">99</div>
+        <div id="comment-count-{{ author }}" style="display: inline;">99</div>
       </button>
       <button class="btn btn-default"
               style="display: inline; padding: 6px 10px;">
