--- a/ception/articles/static/css/articles.css
+++ b/ception/articles/static/css/articles.css
@@ -205,3 +205,33 @@ article .tags {
 .sentence-block-right {
   width: 20%;
 }
+
+.vote-div {
+  padding-top: 10px;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 10px;
+}
+
+.sentence-comment-vote-number {
+  display: inline;
+  font-size: 1.2em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 25px;
+  padding: 5px;
+}
+
+.sentence-comment-vote-span {
+  display: inline;
+  font-size: 16px;
+  color: #bbb;
+}
+
+.sentence-comment-vote-span:hover {
+  cursor: pointer;
+  color: #428bca;
+}
+
+.voted {
+  color: #333;
+}
