--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -1,6 +1,6 @@
 <div id="block-{{ author }}" class="sentence-block">
   <div class="row">
-    <div class="col-md-8 sentence-block-left">
+    <div class="col-md-10">
       <a href="{% url 'profile' author.username %}"><img src="{{ author.profile.get_picture }}"
                                                          class="sentence-portrait"></a>
       <div class="comment-text">
@@ -11,17 +11,23 @@
         <div id="c-{{ author }}" style="display: inline"></div>
       </div>
     </div>
-    <div class="col-md-4 sentence-block-right">
-      <button class="btn btn-default" onclick="show_comment('{{ author }}')"
-              style="display: inline; padding: 6px 10px;">
-        <span class="glyphicon glyphicon-comment" style="display: inline;"></span>
-        <div id="comment-count-{{ author }}" style="display: inline;">99</div>
-      </button>
-      <button class="btn btn-default"
-              style="display: inline; padding: 6px 10px;">
-        <span class="glyphicon glyphicon-thumbs-up" style="display: inline;"></span>
-        <div id="up-vote-count" style="display: inline;">99</div>
-      </button>
+    <div class="col-md-2">
+      <div class="row">
+        <div class="col-md-3">
+          <button class="btn btn-default" onclick="show_comment('{{ author }}')"
+                  style="display: inline; padding: 6px 10px; margin-left: -30px;">
+            <span class="glyphicon glyphicon-comment" style="display: inline;"></span>
+            <div id="comment-count-{{ author }}" style="display: inline;">99</div>
+          </button>
+        </div>
+        <div class="col-md-9 vote-div">
+          <span class="glyphicon glyphicon-thumbs-up sentence-comment-vote-span"></span>
+          <div id="up-vote-count" class="sentence-comment-vote-number">99</div>
+          <span class="glyphicon glyphicon-thumbs-down sentence-comment-vote-span"></span>
+        </div>
+      </div>
+
+
     </div>
   </div>
   <div class="s-comment-block" id="s-comment-block-{{ author }}" style="display: none">
