--- a/staticfiles/css/articles.css
+++ b/staticfiles/css/articles.css
@@ -135,12 +135,12 @@ article .tags {
   border-bottom: none;
 }
 
-.sentence-block del {
+.sentence-content del {
   color: #3399ff;
   text-line-through-color: #6699ff;
 }
 
-.sentence-block ins {
+.sentence-content ins {
   color: #ff3366;
   text-decoration: none;
 }
@@ -158,7 +158,7 @@ article .tags {
   background-color: #e7f7f7;
 }
 
-.sentence-block button {
+.sentence-comment-button {
   display: inline;
   padding: 6px 10px;
   margin-top: 5px;
@@ -212,13 +212,15 @@ article .tags {
   padding-top: 10px;
   text-align: center;
   padding-left: 0;
-  padding-right: 10px;
+  padding-right: 0;
+  margin-left: -20px;
 }
 
 .sentence-comment-button {
   text-align: center;
   width: 30%;
   float: left;
+  min-width: 50px;
 }
 
 .sentence-comment-vote-number {
