bug fixed, prepare for vote

--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -4,6 +4,7 @@
 
 {% block head %}
   <link href="{% static 'css/articles.css' %}" rel="stylesheet">
+  <link href="{% static 'css/edit.css' %}" rel="stylesheet">
   <script src="{% static 'js/articles.js' %}"></script>
   <script src="{% static 'js/edit.js' %}"></script>
 {% endblock head %}
