--- a/ception/articles/templates/articles/partial_sentence.html
+++ b/ception/articles/templates/articles/partial_sentence.html
@@ -18,9 +18,9 @@
         <div class="comment-count" style="display: inline;">-</div>
       </button>
       <div class="vote-div">
-        <span class="glyphicon glyphicon-thumbs-up sentence-comment-vote-span up-vote"></span>
+        <span class="glyphicon glyphicon-thumbs-up sentence-vote up-vote"></span>
         <div class="sentence-comment-vote-number">-</div>
-        <span class="glyphicon glyphicon-thumbs-down sentence-comment-vote-span down-vote"></span>
+        <span class="glyphicon glyphicon-thumbs-down sentence-vote down-vote"></span>
         </div>
     </div>
   </div>
