--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -119,13 +119,13 @@
     padding: 5px;
 }
 
-.sentence-comment-vote-span {
+.sentence-vote {
     display: inline;
     font-size: 16px;
     color: #bbb;
 }
 
-.sentence-comment-vote-span:hover {
+.sentence-vote:hover {
     cursor: pointer;
     color: #428bca;
 }
