--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -59,9 +59,7 @@
           {% include 'articles/partial_sentence.html' with author=author %}
         {% endfor %}
       </div>
-      <div style="min-height: 300px">
-
-      </div>
+      <div style="min-height: 300px"></div>
     </div>
     <div class="col-md-4" id="side-col">
       <div class="row">
