--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -63,44 +63,45 @@
     </div>
     <div class="col-md-4" id="side-col">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <button class="btn btn-default btn-block" id="cancel-button"
                   data-url="{{ form.instance.origin.slug }}">{% trans 'Cancel' %}</button>
         </div>
-        <div class="col-md-4">
-          <button class="btn btn-info btn-block disabled" id="save-button">{% trans 'Save' %}</button>
-        </div>
-        <div class="col-md-4">
+        {#        <div class="col-md-4">#}
+        {#          <button class="btn btn-info btn-block disabled" id="save-button">{% trans 'Save' %}</button>#}
+        {#        </div>#}
+        <div class="col-md-6">
           <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Commit' %}</button>
         </div>
-      </div>
 
-      <div class="row">
-        <div id="summary-window">
-          <ul class="nav nav-tabs nav-justified">
-            <li class="active"><a data-toggle="pill" href="#summary">Summary</a></li>
-            <li><a data-toggle="pill" href="#detail">Detail</a></li>
-          </ul>
-          <div class="tab-content">
-            <div id="summary" class="tab-pane fade in active">
-              <h3>Summary</h3>
-              <div class="list-group">
-                {% for p in data.editing_info %}
-                  <a class="list-group-item side-block">
-                    <p class="list-group-item-text side-sentence">Testtesttesttesttesttesttesttesttesttest</p>
-                    <span class="label label-default edit-span">New</span>
-                    <span class="label label-default delete-span">New</span>
-                  </a>
-                {% endfor %}
-              </div>
-            </div>
-            <div id="detail" class="tab-pane fade">
-              <h3>Detail</h3>
-              <p>Not Implemented yet</p>
-            </div>
-          </div>
+        <h3 style="padding-top: 35px;">Summary</h3>
+        <div class="list-group">
+          {% for p in data.editing_info %}
+            <a class="list-group-item side-block">
+              <p class="list-group-item-text side-sentence"></p>
+              <span class="label label-default edit-span"></span>
+              <span class="label label-default delete-span"></span>
+            </a>
+          {% endfor %}
         </div>
       </div>
+      {#      <div class="row">#}
+      {#        <div id="summary-window">#}
+      {#          <ul class="nav nav-tabs nav-justified">#}
+      {#            <li class="active"><a data-toggle="pill" href="#summary">Summary</a></li>#}
+      {#            <li><a data-toggle="pill" href="#detail">Detail</a></li>#}
+      {#          </ul>#}
+      {#          <div class="tab-content">#}
+      {#            <div id="summary" class="tab-pane fade in active">#}
+      {##}
+      {#            </div>#}
+      {#            <div id="detail" class="tab-pane fade">#}
+      {#              <h3>Detail</h3>#}
+      {#              <p>Not Implemented yet</p>#}
+      {#            </div>#}
+      {#          </div>#}
+      {#        </div>#}
+      {#      </div>#}
 
     </div>
 
