--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -5,6 +5,7 @@
 {% block head %}
   <link href="{% static 'css/articles.css' %}" rel="stylesheet">
   <link href="{% static 'css/edit.css' %}" rel="stylesheet">
+  <link href="{% static 'css/callout.css' %}" rel="stylesheet">
   <script src="{% static 'js/articles.js' %}"></script>
   <script src="{% static 'js/edit.js' %}"></script>
 {% endblock head %}
@@ -12,12 +13,12 @@
 {% block main %}
   <ol class="breadcrumb">
     <li><a href="{% url 'articles' %}">{% trans 'Articles' %}</a></li>
-    <li><a href="{% url 'article' form.instance.origin.slug %}">{{ form.instance.origin.title }}</a></li>
+    <li>{{ form.instance.origin.title }}</li>
     <li class="active">{% trans 'Edit' %}</li>
   </ol>
   <div class="row">
     <div class="col-md-8">
-      <h2><a href="{% url 'article' form.instance.origin.slug %}">{{ form.instance.origin.title }}</a></h2>
+      <h2>{{ form.instance.origin.title }}</h2>
 
       <div class="info">
         <span class="date">
@@ -38,6 +39,23 @@
           <div id="selected-id" style="display: inline"></div>
         </span>
       </div>
+
+
+      <div class="bs-callout bs-callout-info">
+        <h4>
+          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
+             aria-controls="collapseOne">
+            Description
+          </a>
+        </h4>
+        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+          <div class="panel-body">
+            {{ form.instance.origin.description | safe }}
+          </div>
+        </div>
+
+      </div>
+
 
       <form id="edit_form" data-id="{{ form.instance.pk }}">
         {% csrf_token %}
@@ -64,17 +82,18 @@
     <div class="col-md-4" id="side-col">
       <div class="row">
         <div class="col-md-6">
-          <button class="btn btn-default btn-block" id="cancel-button"
-                  data-url="{{ form.instance.origin.slug }}">{% trans 'Cancel' %}</button>
+          <a class="btn btn-default btn-block" id="cancel-button" style="margin-top: 10px;"
+             href="{% url 'articles' %}">{% trans 'Cancel' %}</a>
         </div>
         {#        <div class="col-md-4">#}
         {#          <button class="btn btn-info btn-block disabled" id="save-button">{% trans 'Save' %}</button>#}
         {#        </div>#}
         <div class="col-md-6">
-          <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Commit' %}</button>
+          <button class="btn btn-primary btn-block" id="commit-button"
+                  style="margin-top: 10px;">{% trans 'Commit' %}</button>
         </div>
 
-        <h3 style="padding-top: 35px;">Summary</h3>
+        <h3 style="margin-top: 58px;">Summary</h3>
         <div class="list-group">
           {% for p in data.editing_info %}
             <a class="list-group-item side-block">
@@ -112,9 +131,9 @@
         var json_str_array = {{ data.json|safe }};
         var counter = {{ data.counter }};
         var info_str_array = {{ data.editing_info|safe }};
-        init_page(version_id, current_user, json_str_array, counter);
+        var origin_count = {{ data.origin_count }};
+        init_page(version_id, current_user, json_str_array, counter, origin_count);
         init_sidebar(info_str_array);
-
       })();
     </script>
   </div>
