--- a/ception/articles/templates/articles/partial_article.html
+++ b/ception/articles/templates/articles/partial_article.html
@@ -1,38 +1,55 @@
 <article>
-  <h2><a href="{% url 'article' article.slug %}">{{ article.title }}</a></h2>
-  <div class="info">
-    <span class="date">
-      <span class="glyphicon glyphicon-calendar"></span>
-      {{ article.create_date }}
-    </span>
-    <span class="user">
-      <a href="{% url 'profile' article.create_user.username %}"><img src="{{ article.create_user.profile.get_picture }}"></a>
-      <a href="{% url 'profile' article.create_user.username %}">{{ article.create_user.profile.get_screen_name }}</a>
-    </span>
-    <span class="comments">
-      <span class="glyphicon glyphicon-comment"></span>
-      {{ article.get_comments.count }} Comments
-    </span>
-    <span class="edit">
-      <span class="glyphicon glyphicon-pencil"></span>
-      10 Edits
-    </span>
+  <div class="row">
+    <div class="col-md-9">
+      <h2>{{ article.title }}</h2>
+      <div class="info">
+        <span class="date">
+          <span class="glyphicon glyphicon-calendar"></span>
+          {{ article.create_date }}
+        </span>
 
+        <span class="user">
+          <a href="{% url 'profile' article.create_user.username %}"><img
+              src="{{ article.create_user.profile.get_picture }}"></a>
+          <a href="{% url 'profile' article.create_user.username %}">{{ article.create_user.profile.get_screen_name }}</a>
+        </span>
+        <span class="comments">
+          <span class="glyphicon glyphicon-comment"></span>
+          {{ article.get_comments.count }} Comments
+        </span>
+        <span class="edit">
+          <span class="glyphicon glyphicon-pencil"></span>
+          10 Edits
+        </span>
+      </div>
+    </div>
+    <div class="col-md-3" style="margin-top: 10px">
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+          <a href="{% url 'edit_compare' article.id %}" type="button" class="btn btn-default">UI #1</a>
+        </div>
+        <div class="btn-group" role="group">
+          <a href="{% url 'edit' article.id %}" type="button" class="btn btn-default">UI #2</a>
+        </div>
+      </div>
+    </div>
   </div>
+
+
   <textarea class="content" id="{{ article.id }}" disabled>
     {{ article.content|safe }}
   </textarea>
   <script>
     (function() {
-      CKEDITOR.config.height = 150;
+      CKEDITOR.config.height = 200;
       var editor = CKEDITOR.replace( "{{ article.id }}");
     })();
   </script>
-  {% if article.get_tags %}
-    <div class="tags">
-      {% for tag in article.get_tags %}
-        <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
-      {% endfor %}
-    </div>
-  {% endif %}
+  {#  {% if article.get_tags %}#}
+  {#    <div class="tags">#}
+  {#      {% for tag in article.get_tags %}#}
+  {#        <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>#}
+  {#      {% endfor %}#}
+  {#    </div>#}
+  {#  {% endif %}#}
 </article>
